--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-restless-math-a4p84irv-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="kl6av1qhGSfx"
 POSTGRES_DATABASE="verceldb"
+AUTH_SECRET=ac03lVIOIwm0dTf4cQgUnyz3KrH0IN/gNQahFdg0obc=
